<resources>
    <string name="app_name">Travel Assistant</string>
    <string name="welcome">Your journey starts here</string>
    <string name="welcome2">Lets explore great experience your\nown country</string>
    <string name="start">Lets Start</string>
    <string name="welcome_back">Welcome\n Back</string>
    <string name="title_activity_login">activity_login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="email_address">Email Address</string>
    <string name="hint_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">have an account ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="photo">Photo</string>
    <string name="add_photo">Add Photo</string>
    <string name="upload_later">Upload Later</string>
    <string name="home_tv">Where  would \nyou like to visit ?</string>
    <string name="recommendation">Recommendation</string>
    <string name="category">Categories</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="user">User</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="addReview">Add Review</string>
    <string name="direction">Directions</string>
    <string name="no_data">No Data</string>
    <string name="error_email">Error Email</string>
    <string name="error_pass">Error</string>
    <string name="hint_password">Password</string>
    <string name="upload">Upload</string>
    <string name="succes_register">Succes</string>
    <string name="login_success">Success Login</string>
    <string name="login_fail">Fail Login</string>
    <string name="upload_success">Success Upload</string>
    <string name="upload_fail"> Fail Upload</string>
    <string name="error_400">Email or password is Wrong</string>
    <string name="permission_denied">Permission not granted!</string>
    <string name="image">image</string>
    <string name="location">Location</string>
    <string name="namePlace">namePlace</string>
    <string name="addressLocation">addressLocation</string>
    <string name="All">All</string>
    <string name="Jogja">Jogja</string>
    <string name="Bali">Bali</string>
    <string name="Jakarta">Jakarta</string>
    <string name="retry">retry</string>
    <string name="overview">Overview</string>
    <string name="review">Review</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="error_401">Account Not Found</string>
    <string name="no_name">Name No Data</string>
    <string name="no_city">City No Data</string>
    <string name="no_price">Price No Data</string>
    <string name="edit_profile">Edit profile</string>
    <string name="language">Change Language</string>
    <string name="about">About</string>
    <string name="logout">Log Out</string>
    <string name="Nature">Nature</string>
    <string name="Culinary">Culinary</string>
    <string name="History">History</string>
    <string name="title_activity_nature">NatureActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_culinary">CulinaryActivity</string>
    <string name="description">Description</string>
    <string name="title_activity_add_place">AddPlace</string>
    <string name="title_activity_about">About</string>
    <string name="Name">Nama</string>
    <string name="name">Name Place</string>
    <string name="price">Price</string>
    <string name="City">City</string>
    <string name="aboutApp">Predidise is an application that helps you find tourist destinations with the ease. Get travel recommendations according to your wishes.</string>
    <string name="predidiseApp">2022 Predidise Inc</string>
    <string name="rating">Rating</string>
    <string name="choose_img">Choose image</string>
    <string name="up_success">Success</string>
    <string name="empty_img">no data</string>
    <string name="list_tourism_nature">List Tourism Nature</string>
    <string name="list_tourism_urban">List Tourism Urban</string>
    <string name="create">Create Tourism</string>
    <string name="search_hint">search</string>
    <string name="mail">halo@gmail.com</string>
</resources>