<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/button_rg"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="12sp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/white"
        android:text="@string/All"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/button_rg"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="12sp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/white"
        android:text="@string/Jogja"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/button_rg"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="12sp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/white"
        android:text="@string/Bali"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/button_rg"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="12sp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/white"
        android:text="@string/Jakarta"/>



</LinearLayout>