<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_favorite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_gravity="center"
    android:layout_marginTop="8dp"
    card_view:cardCornerRadius="4dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_place"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/image"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_place"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/dark_blue"
            card_view:layout_constraintBottom_toBottomOf="@+id/img_place"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/img_place"
            card_view:layout_constraintTop_toTopOf="@+id/img_place"
            card_view:layout_constraintVertical_bias="0.346"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:layout_toEndOf="@id/img_place"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/dark_blue"
            card_view:layout_constraintStart_toEndOf="@+id/img_place"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_username"
            tools:text="@string/location" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>